--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="footer mt-5 pt-4 bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-6 col-md-3">
                 <ul>
                     <li class="col"><a href="#">Inicio</a></li>
                     <li class="col"><a href="#">Habitaciones</a></li>
@@ -10,20 +10,20 @@
                     <li class="col"><a href="#">Contacto</a></li>
                 </ul>
             </div>
-            <div class="col-md-3">
+            <div class="col-6 col-md-3">
                 <ul>
-                    <li><a href="#">Iniciar Sesión</a></li>
-                    <li><a href="#">Registro</a></li>
+                    <li><a href="/login">Iniciar Sesión</a></li>
+                    <li><a href="/register">Registro</a></li>
                 </ul>
             </div>
-            <div class="col-md-3">
-                <h3 class="text-dark">Siguenos en</h3>
-                <nav class="nav redes">
+            <div class="col-md-3 text-center">
+                <h3 class="text-dark text-md-start">Siguenos en</h3>
+                <nav class="nav redes justify-content-center justify-content-md-start">
                     <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
                     <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                 </nav>
             </div>
-            <div class="col-md-3 text-center text-dark">
+            <div class="col-md-3 my-3 my-md-0 text-center text-dark">
                 <h3>Gracias por tu visita</h3>
                 <h3>¡Hasta Pronto!</h3>
             </div>
@@ -31,12 +31,12 @@
     </div>
     <div class="copyright py-2">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row text-center">
+                <div class="col-md-6 text-md-start">
                     <h5 class="m-0">&copy 2020 Hotel Ceibo Real | Todos los derechos reservados</h5>
                 </div>
                 <div class="col-md-6">
-                    <h5 class="text-right m-0">Desarrollado por:</h5>
+                    <h5 class="text-md-end mt-3 m-md-0">Desarrollado por:</h5>
                 </div>
             </div>
         </div>
