--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
-<div id="carousel" class="carousel slide" data-ride="carousel">
+<!--Pagina Principal-->
+{{> navbar}}
+
+<div id="carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner h-100">
         <div class="carousel-item active">
             <img class="d-block w-100 img-fluid" src="/images/slide1.jpg" alt="Hotel Ceibo Real">
@@ -6,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-5 bg-light p-4 rounded-lg text-dark info-carousel">
                         <h2 class="text-uppercase">Habitaciones y Suites de Primera</h2>
-                        <p class="my-3">Servicio a la Habitacion las 24 Horas</p>
+                        <p class="my-3">Servicio a la Habitación las 24 Horas</p>
                         <a href="#" class="btn btn-lg btn-warning">¡Haz una reserva!</a>
                     </div>
                 </div>
@@ -22,11 +25,11 @@
             </div>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carousel" data-slide="prev" role="button">
+    <a class="carousel-control-prev" href="#carousel" data-bs-slide="prev" role="button">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carousel" data-slide="next" role="button">
+    <a class="carousel-control-next" href="#carousel" data-bs-slide="next" role="button">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
@@ -80,7 +83,7 @@
 
 <section class="comida mt-5">
     <div class="container-fluid p-0 h-100">
-        <div class="row no-gutters h-100 justify-content-center justify-content-md-start align-items-center">
+        <div class="row g-0 h-100 justify-content-center justify-content-md-start align-items-center">
             <div class="bg-comida col"></div>
             <div class="col-8 comida-info text-center text-md-left ml-md-5">
                 <p>Nuestro hotel no solo es confort, tambien encontrará nuestro sabor criollo manabita</p>
@@ -108,6 +111,7 @@
         </div>
     </div>
 </section>
-<button class="arriba btn btn-danger">
+<button class="arriba btn btn-danger arriba-hidden">
     <i class="fas fa-arrow-alt-circle-up"></i>
 </button>
+{{> footer}}
