--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,7 +3,7 @@
         <a href="/" class="navbar-brand">
             <h1 class="m-0">Hotel <span class="text-danger text-uppercase d-block">Ceibo Real</span></h1>
         </a>
-        <button class="navbar-toggler" data-target="#nav" data-toggle="collapse" aria-controls="nav"
+        <button class="navbar-toggler" type="button" data-bs-target="#nav" data-bs-toggle="collapse" aria-controls="nav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="#">Servicos</a>
                 <a class="nav-link" href="#">Reserva</a>
                 <a class="nav-link" href="#">Contacto</a>
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/login">
                     <button class="btn btn-danger" type="button">Inicia Sesión</button>
                 </a>
             </nav>
