--- a/views/login/index.hbs
+++ b/views/login/index.hbs
@@ -3,7 +3,7 @@
         <div><i class="fas fa-arrow-left"></i></div>
         <div class="col col-md-6 d-flex">
             <div class="container-sm mx-md-1 mx-lg-3 mx-xl-5">
-                <form class="login bg-white p-4 pt-3 rounded shadow">
+                <form class="login bg-white p-4 pt-3 rounded shadow" action="/login" method="POST">
                     <h5 class="mb-3 text-end">Hotel <span class="text-danger">Ceibo Real</span></h5>
                     <h2 class="mb-4 text-center">Bienvenido</h2>
                     <div class="mb-3">
