--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -14,6 +14,9 @@
                 <a class="nav-link" href="#">Servicos</a>
                 <a class="nav-link" href="#">Reserva</a>
                 <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="/register">
+                    <button class="btn btn-outline-secondary" type="button">Regístrate</button>
+                </a>
                 <a class="nav-link" href="/login">
                     <button class="btn btn-danger" type="button">Inicia Sesión</button>
                 </a>
