--- a/public/css/app.css
+++ b/public/css/app.css
@@ -229,7 +229,7 @@ p {
 .fa-check-circle {
    position: absolute;
    right: 2.5%;
-   bottom: 16%;
+   bottom: 15%;
    color: green;
 }
 .form-input-error {
@@ -242,7 +242,86 @@ p {
 /*
 *
 *
-*Media Queries
+* Loader verify email
+*
+*
+*
+*/
+
+.loader-email {
+   position: absolute;
+   right: 2.5%;
+   bottom: 16%;
+}
+
+.loader {
+   position: absolute;
+   font-size: 10px;
+   text-indent: -9999em;
+   width: 1rem;
+   height: 1rem;
+   border-radius: 50%;
+   background: #383838;
+   background: -moz-linear-gradient(left, #383838 10%, rgba(56, 56, 56, 0) 42%);
+   background: -webkit-linear-gradient(left, #383838 10%, rgba(56, 56, 56, 0) 42%);
+   background: -o-linear-gradient(left, #383838 10%, rgba(56, 56, 56, 0) 42%);
+   background: -ms-linear-gradient(left, #383838 10%, rgba(56, 56, 56, 0) 42%);
+   background: linear-gradient(to right, #383838 10%, rgba(56, 56, 56, 0) 42%);
+   position: relative;
+   -webkit-animation: load3 1.4s infinite linear;
+   animation: load3 1.4s infinite linear;
+   -webkit-transform: translateZ(0);
+   -ms-transform: translateZ(0);
+   transform: translateZ(0);
+}
+.loader:before {
+   width: 50%;
+   height: 50%;
+   background: #383838;
+   border-radius: 100% 0 0 0;
+   position: absolute;
+   top: 0;
+   left: 0;
+   content: "";
+}
+.loader:after {
+   background: #ffffff;
+   width: 75%;
+   height: 75%;
+   border-radius: 50%;
+   content: "";
+   margin: auto;
+   position: absolute;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+}
+@-webkit-keyframes load3 {
+   0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+   }
+   100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+   }
+}
+@keyframes load3 {
+   0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+   }
+   100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+   }
+}
+
+/*
+*
+*
+* Media Queries
 *
 *
 *
